<resources>
    <string name="app_name">Water is Life</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="share">Share</string>
    <string name="mess_share">Have you seen the new app yet?</string>
    <string name="dashboard_main">It\'s time to create a new plant</string>
    <string name="amountOfDays">How many days do you want to grow a plant?</string>
    <string name="firstPlant">Grandma\'s favorite</string>
    <string name="scndPlant">Tall handsome</string>
    <string name="dashboard_start">Start to drink!</string>
    <string name="amountOfWater">How many liters do you want to drink per day?</string>
    <string name="dashboard_rb">You didn\'t choose a plant!</string>
    <string name="dashboard_del">Delete the plant</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm the action</string>
    <string name="removePlant">Are you sure you want to remove the plant</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="today">Today</string>
    <string name="today_goal">Today goal</string>
    <string name="today_water">I drank today</string>
    <string name="overflowed">The flower is overflowed! Please start again.</string>
    <string name="withered">The flower is dry! Please start again.</string>
    <string name="died">Your flower is died! Please start again.</string>
    <string name="withered_notif">The flower is dry! Please water it.</string>
    <string name="grown">You have successfully grown a flower! Plant a new one!</string>
    <string name="waterMe">Water me!</string>
    <string name="feedback">feedback</string>
    <string name="undo">undo</string>
    <string name="notif_channel">notif_channel</string>
    <string name="appColor">Set app color</string>
    <string name="cancel">Cancel</string>
    <string name="ColorPicker_Dialog">Color picker</string>
    <string name="notif">Notification about plant</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="forget">Don\'t forget about me!</string>
    <string name="uDrank">"You drank "</string>


</resources>
