<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayDash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="0.15"
            android:text="@string/dashboard_main"
            android:textColor="@color/design_default_color_primary"
            android:textSize="18sp"
            android:textStyle="italic" />


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1.5">

            <TableRow
                android:id="@+id/tr1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="5">

                <ImageView
                    android:id="@+id/img1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/plant1_1"
                    android:scaleType="centerInside" />

                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/plant2_1"
                    android:scaleType="centerCrop" />

            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1">

                <RadioGroup
                    android:id="@+id/rg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb1ph"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/firstPlant" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1" />

                    <RadioButton
                        android:id="@+id/rb2ph"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/scndPlant" />
                </RadioGroup>
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="0dp"

                android:layout_weight="0.6"
                android:text="@string/amountOfDays"
                android:textColor="@color/design_default_color_primary"
                android:textSize="16sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/dperiod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:max="100"
                    android:progress="7" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="15" />

                <TextView
                    android:id="@+id/txtAmontDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="7"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="16dp"
                    android:textStyle="italic" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:text="@string/amountOfWater"
                android:textColor="@color/design_default_color_primary"
                android:textSize="16dp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/dwater"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:max="9"
                    android:progress="2" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="15" />

                <TextView
                    android:id="@+id/txtAmontWater"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="2"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="16dp"
                    android:textStyle="italic" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.5"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/dashboard_start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:text="@string/dashboard_start"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.01" />

                <Button
                    android:id="@+id/dashboard_delete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/dashboard_del"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="15sp"
                    android:textStyle="italic" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>